<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/generate_key_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:background="@drawable/button_enabled"
        android:onClick="generate_key_pair"
        android:padding="@dimen/padding_value"
        android:text="@string/generate_key_pair"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/view_private_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:background="@drawable/button_disabled"
        android:onClick="view_private_key"
        android:padding="@dimen/padding_value"
        android:text="@string/view_private_key"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/view_public_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:background="@drawable/button_disabled"
        android:onClick="view_public_key"
        android:padding="@dimen/padding_value"
        android:text="@string/view_public_key"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginBottom="@dimen/top_margin"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_value">

        <EditText
            android:id="@+id/text_to_encrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="top"
            android:hint="@string/text_to_encrypt"
            android:lines="4"
            android:maxLength="60"
            android:textColorHint="@android:color/black" />

        <ImageView
            android:id="@+id/text_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:onClick="clear_text_to_encrypt"
            android:src="@android:drawable/ic_delete" />
    </RelativeLayout>

    <Button
        android:id="@+id/encrypt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_value"
        android:background="@drawable/encrypt_background"
        android:padding="8dp"
        android:text="@string/encrypt_text"
        android:textAllCaps="false"
        android:onClick="perform_encryption"
        android:textColor="#4873FA" />

    <EditText
        android:id="@+id/text_viewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_value"
        android:background="@drawable/encrypted_text"
        android:padding="@dimen/padding_value"
        android:gravity="top"
        android:hint="@string/display_text_in_this_box"
        android:textColorHint="@android:color/black" />

</LinearLayout>